--- a/Python_Functions_notes.ipynb
+++ b/Python_Functions_notes.ipynb
@@ -77,6 +77,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## DaF: just defining the function, not calling it to run. It is not executing the cold. "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "scrolled": true
@@ -96,6 +105,62 @@
    "source": [
     "adding_constant(7)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## function definition . Adding the print inside the function,\n",
+    "#its not a good aidear, use always return, because it relates to the variable\n",
+    "def adding_constant(input_var):\n",
+    "    result= input_var+50  ##logic\n",
+    "    print= \"Here I am\"\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#calling the new function (with the print part)\n",
+    "\n",
+    "adding_constant(7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'out' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mout\u001b[49m\u001b[38;5;241m*\u001b[39madding_constant(\u001b[38;5;241m7\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'out' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -401,6 +466,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Daf: adapts the division function, since it is impossible to divede per 0, \n",
+    "#it adds a condition, when y = 0, it retorns the message \"print...\", \n",
+    "#else it will return just the output of the function (with variables)\n",
+    "# the returns is identation because it should be calculated only if the y not = 0, \n",
+    "#otherwise it would retorn a erros message"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -498,6 +576,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## DaF: it retunrs the stg 9 times (hehehe...)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -574,6 +661,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Daf: it is called local scopre becaus de x, inside teh function, ist defined locally, \n",
+    "#only when the fucntion is running. Not on the notebook level"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -617,6 +714,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 1990 because it was defined on the global level, the x=2020 was defined on the local(function) level. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -630,6 +736,15 @@
    "outputs": [],
    "source": [
     "y = 88"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### DaF: in this case we are trasnforming the y in the function into a global Y (thats will words on the entire notbook)"
    ]
   },
   {
@@ -723,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
