--- a/RH_Pandas_Data_Frame_General-Part_1.ipynb
+++ b/RH_Pandas_Data_Frame_General-Part_1.ipynb
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "90d7eae9",
    "metadata": {},
    "outputs": [
@@ -848,7 +848,7 @@
        "6    Dog    2      XX"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "022d6bf8",
    "metadata": {},
    "outputs": [
@@ -971,16 +971,32 @@
     }
    ],
    "source": [
+    "#25% is the number on the 1/4 of the list, . 50% iquals median. 75% ist the 3/4 of the list. \n",
     "people_df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "bafa664c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "name       7\n",
+       "age        7\n",
+       "country    7\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#shift + tab to access the\n",
     "people_df.count()"
    ]
   },
