--- a/Pandas/RH_Pandas_Data_Frame_General-3.ipynb
+++ b/Pandas/RH_Pandas_Data_Frame_General-3.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "833fb7e1",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
      "evalue": "invalid syntax (3902233566.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [5]\u001b[0;36m\u001b[0m\n\u001b[0;31m    import\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [15]\u001b[0;36m\u001b[0m\n\u001b[0;31m    import\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -40,7 +40,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
+   "id": "0178c0d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pol</td>\n",
+       "      <td>22</td>\n",
+       "      <td>ES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Javi</td>\n",
+       "      <td>20</td>\n",
+       "      <td>ES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maria</td>\n",
+       "      <td>23</td>\n",
+       "      <td>AR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anna</td>\n",
+       "      <td>24</td>\n",
+       "      <td>FR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Anna</td>\n",
+       "      <td>24</td>\n",
+       "      <td>UK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Javi</td>\n",
+       "      <td>30</td>\n",
+       "      <td>MA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>2</td>\n",
+       "      <td>XX</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age country\n",
+       "0    Pol   22      ES\n",
+       "1   Javi   20      ES\n",
+       "2  Maria   23      AR\n",
+       "3   Anna   24      FR\n",
+       "4   Anna   24      UK\n",
+       "5   Javi   30      MA\n",
+       "6    Dog    2      XX"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "people_df = pd.read_csv(\"data/people.csv\")\n",
+    "people_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "74dda605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "5ce92ee6",
    "metadata": {
     "scrolled": true
@@ -53,7 +163,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpeople_df\u001b[49m\n",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpeople_df\u001b[49m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'people_df' is not defined"
      ]
     }
@@ -375,6 +485,7 @@
     }
    ],
    "source": [
+    "#mean function applied to groupby, gives the avaerage age . Use with min and max, for string considers the alphb. order \n",
     "people_df.groupby([\"country\",\"name\"]).mean()"
    ]
   },
@@ -495,6 +606,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#running the lambda grps:grps.mean() +15) for age, on the people_df groupby name \n",
+    "#people_df.groupby(\"name\")[\"age\"].apply(lambda grps:grps.mean() +15) \n",
+    "#---> se usar 2[[]] para age, o resultado será no DataFrame format, com apenas 1 [] o resultado será em Series\n",
+    "#apply =for loop\n",
+    "\n",
+    "\n",
+    "#[\"age\"].apply(lambda grps:grps.mean() +15) ---> como o [\"age\"] está especificado, \n",
+    "#o lambda será apenas para essa coluna. Se näo especificar nenhuma coluna será aplciado para todas as colunas do DataFrame\n",
+    "\n",
     "people_df.groupby(\"name\")[\"age\"].apply(lambda grps:grps.mean() +15)"
    ]
   },
@@ -693,6 +813,8 @@
     }
    ],
    "source": [
+    "#retorna o valor máximo de cada coluna para os grupos, divididos por nome \n",
+    "\n",
     "people_df.groupby(\"name\").apply(lambda gp:gp.max() )"
    ]
   },
@@ -1044,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "82bb410b",
    "metadata": {
     "scrolled": false
@@ -1057,7 +1179,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "d6338e96",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1359,7 @@
        "14          Vietnam         East Asia & Pacific    95540395               75"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
